--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.0.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
